# asterix-lib-generator

./: README.md  default.nix  haskell.html  index.html  python.html  reference.txt  source.html  timestamp.txt
.github/workflows/: main.yml  periodic.yml
code-generator/: README.md  code-generator.cabal  default.nix
code-generator/app/: Asterix-code-generator.hs
code-generator/lib/Asterix/: Common.hs  Struct.hs
code-generator/lib/Asterix/Language/Python/: Generator.hs  generic.py
comet-py/: README.md  checkpy.sh  comet-py  shell.nix
lib/python/: asterix-lib.tgz
nix/: aspecs.json
support/Language/Python/: lib.nix  pyproject.toml
tests/Language/Python/: README.md  checkpy.sh  shell.nix  test_asterix.py  test_bitstring.py  test_raw_datablock.py  test_uaps.py
tests/specs/: cat-000.ast  cat-001.ast  cat-002.ast  ref-000.ast
website/: DEVEL.markdown  default.nix  haskell.md  index.md  python.md  site.hs  source.md
website/templates/: default.html  python.md
