[project]
name = "asterix-lib"
dynamic = ['version']
authors = [
  { name="Zoran Bošnjak", email="zoran.bosnjak@sloveniacontrol.si" },
]
description = "Asterix data processing library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://zoranbosnjak.github.io/comet/"
"Bug Tracker" = "https://github.com/zoranbosnjak/comet/issues"

[tool.setuptools.dynamic]
version = {attr = "asterix.VERSION"}

