[project]
name = "asterix-lib"
dynamic = ['version']
authors = [
  { name="Zoran Bošnjak", email="zoran.bosnjak@sloveniacontrol.si" },
]
description = "Asterix data processing library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'typing_extensions; python_version < "3.10"',
]

[project.urls]
"Homepage" = "https://zoranbosnjak.github.io/asterix-lib-generator/"
"Bug Tracker" = "https://github.com/zoranbosnjak/asterix-lib-generator/issues"

[tool.setuptools.dynamic]
version = {attr = "asterix.VERSION"}

